<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".NumberGuesser">

    <!-- Main content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#000000">

        <!-- Your main content here -->

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/Actionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/hamburgerIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignBottom="@+id/Actionbar"
            android:layout_alignParentStart="true"
            android:background="#00000000"
            android:contentDescription="@string/nav_open"
            android:scaleX="2"
            android:scaleY="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_menu_24" />

        <TextView
            android:id="@+id/money_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/justanotherhandregular"
            android:text="@string/money_start"
            android:textColor="@color/golden"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/Actionbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Actionbar" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="124dp"
            android:layout_height="62dp"
            android:layout_alignBottom="@+id/Actionbar"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/app_name"
            android:fontFamily="@font/justanotherhandregular"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/golden"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/Actionbar"
            app:layout_constraintStart_toEndOf="@+id/hamburgerIcon"
            app:layout_constraintTop_toTopOf="@+id/Actionbar"
            app:layout_constraintVertical_bias="0.333" />

        <ImageView
            android:id="@+id/coin_topbar"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_marginEnd="12dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@+id/Actionbar"
            app:layout_constraintEnd_toStartOf="@+id/money_text"
            app:layout_constraintTop_toTopOf="@+id/Actionbar"
            app:layout_constraintVertical_bias="0.484"
            app:srcCompat="@drawable/coinart" />

        <TextView
            android:id="@+id/play_text"
            android:layout_width="321dp"
            android:layout_height="76dp"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/justanotherhandregular"
            android:text="@string/play_num_guesser"
            android:textAlignment="center"
            android:textColor="@color/golden"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Actionbar" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/justanotherhandregular"
            android:text="@string/guess_info"
            android:textColor="@color/golden"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/play_text" />

        <NumberPicker
            android:id="@+id/number_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/white"
            android:foreground="@drawable/rectangle"
            app:layout_constraintBottom_toBottomOf="@+id/confirm_guess"
            app:layout_constraintEnd_toStartOf="@+id/confirm_guess"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/confirm_guess" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/justanotherhandregular"
            android:text="@string/question_mark"
            android:textColor="@color/golden"
            android:textSize="200sp"
            app:layout_constraintBottom_toTopOf="@+id/confirm_guess"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <TextView
            android:id="@+id/confirm_guess"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:layout_marginBottom="96dp"
            android:background="@color/black"
            android:fontFamily="@font/justanotherhandregular"
            android:gravity="center"
            android:text="@string/guess"
            android:textColor="@color/golden"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.739"
            app:layout_constraintStart_toStartOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Drawer content -->
    <LinearLayout
        android:id="@+id/drawer_content"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/black"
        android:orientation="vertical">

        <!-- Your drawer content here -->
        <include layout="@layout/navigation" />
        <EditText
            android:id="@+id/enter_guess_box"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:layout_marginStart="175dp"
            android:layout_marginEnd="178dp"
            android:layout_marginBottom="20dp"
            android:autoText="true"
            android:autofillHints="@string/enter_guess"
            android:background="@color/black"
            android:fontFamily="@font/justanotherhandregular"
            android:gravity="center"
            android:hint="@string/enter_guess"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/golden"
            android:textColorHint="@color/golden"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/confirm_guess"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>