<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity">

    <!-- Main content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Your main content here -->

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/Actionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/hamburgerIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignBottom="@+id/Actionbar"
            android:layout_alignParentStart="true"
            android:background="#00000000"
            android:contentDescription="Navigate"
            android:scaleX="2"
            android:scaleY="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_menu_24" />
        <TextView
            android:id="@+id/money_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/justanotherhandregular"
            android:text="@string/money_start"
            android:textColor="@color/golden"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/Actionbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Actionbar" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="124dp"
            android:layout_height="62dp"
            android:layout_alignBottom="@+id/Actionbar"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/app_name"
            android:fontFamily="@font/justanotherhandregular"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/golden"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/Actionbar"
            app:layout_constraintStart_toEndOf="@+id/hamburgerIcon"
            app:layout_constraintTop_toTopOf="@+id/Actionbar"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/coin_topbar"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_marginEnd="12dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@+id/Actionbar"
            app:layout_constraintEnd_toStartOf="@+id/money_text"
            app:layout_constraintTop_toTopOf="@+id/Actionbar"
            app:layout_constraintVertical_bias="0.484"
            app:srcCompat="@drawable/coinart" />

        <ImageView
            android:id="@+id/claw_machine"
            android:layout_width="389dp"
            android:layout_height="525dp"
            android:layout_below="@+id/Actionbar"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="Claw Machine"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/button_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Actionbar"
            app:srcCompat="@drawable/claw_machine" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/button_container"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_below="@+id/claw_machine"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="50dp"
            android:background="@color/black"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/claw_machine" />

        <Button
            android:id="@+id/reminisce_btn"
            android:layout_width="64dp"
            android:layout_height="62dp"
            android:layout_alignTop="@+id/button_container"
            android:layout_alignEnd="@+id/button_container"
            android:layout_alignBottom="@+id/button_container"
            android:layout_marginEnd="30dp"
            android:background="@drawable/circle"
            android:backgroundTint="#FF0000"
            android:fontFamily="@font/justanotherhandregular"
            android:text="@string/app_name"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/button_container"
            app:layout_constraintEnd_toEndOf="@+id/button_container"
            app:layout_constraintTop_toTopOf="@+id/button_container" />

        <TextView
            android:id="@+id/x50"
            android:layout_width="36dp"
            android:layout_height="35dp"
            android:fontFamily="@font/justanotherhandregular"
            android:text="@string/x50"
            android:textColor="@color/golden"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/button_container"
            app:layout_constraintEnd_toStartOf="@+id/coin"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/button_container"
            app:layout_constraintTop_toTopOf="@+id/button_container"
            app:layout_constraintVertical_bias="0.456" />

        <ImageView
            android:id="@+id/coin"
            android:layout_width="39dp"
            android:layout_height="38dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/button_container"
            app:layout_constraintEnd_toStartOf="@+id/reminisce_btn"
            app:layout_constraintTop_toTopOf="@+id/button_container"
            app:srcCompat="@drawable/coinart" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Drawer content -->
    <LinearLayout
        android:id="@+id/drawer_content"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/black"
        android:orientation="vertical">

        <!-- Your drawer content here -->
        <include layout="@layout/navigation" />

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>